
opam-version: "2.0"
version: "0.1.0"
maintainer: "derutakayu@gmail.com"
authors: "derui"
license: "MIT"
homepage: "https://github.com/derui/reactjscaml"
bug-reports: "https://github.com/derui/reactjscaml"
dev-repo: "git+https://github.com/derui/reactjscaml"
tags: []
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name ] {test}
]
depends: [
  "dune" {build & >= "1.0.0"}
  "js_of_ocaml" { >= "3.0.2"}
  "js_of_ocaml-ppx" { >= "3.0.2"}
  "ppx_variants_conv" { >= "v0.10.0"}
  "mocha_of_ocaml" {test}
  "snap-shot-it_of_ocaml" {test}
]
available: ["ocaml" >= "4.05.0"]
