
opam-version: "2.0"
version: "0.3.1"
maintainer: "derutakayu@gmail.com"
authors: "derui"
license: "MIT"
homepage: "https://github.com/derui/jsoo_reactjs"
bug-reports: "https://github.com/derui/jsoo_reactjs"
dev-repo: "git+https://github.com/derui/jsoo_reactjs"
tags: []
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name ] {test}
]
depends: [
  "dune" {build & >= "1.0.0"}
  "js_of_ocaml" { >= "3.0.2"}
  "js_of_ocaml-ppx" { >= "3.0.2"}
  "mocha_of_ocaml" {test}
  "snap-shot-it_of_ocaml" {test}
  "ppxlib" { >= "0.2.1" }
]
available: ["ocaml" >= "4.05.0"]
