
opam-version: "1.2"
version: "0.1.0"
maintainer: "derutakayu@gmail.com"
authors: "derui"
license: "MIT"
homepage: "https://github.com/derui/reactjs_of_ocaml"
bug-reports: "https://github.com/derui/reactjs_of_ocaml"
dev-repo: "https://github.com/derui/reactjs_of_ocaml"
tags: []
build: [
  "jbuilder" "build" "-p" name "-j" jobs
]
depends: [
  "jbuilder" {build & >= "1.0+beta16"}
  "ocamlfind"
  "js_of_ocaml" {build & >= "3.0.2"}
  "js_of_ocaml-ppx" {build & >= "3.0.2"}
  "ppx_variants_conv" {>= "v0.10.0"}
  "mocha_of_ocaml" {"test"}
]
available: [ocaml-version >= "4.05.0"]
