
opam-version: "1.2"
version: "0.1.0"
maintainer: "derutakayu@gmail.com"
authors: "derui"
license: "MIT"
homepage: "https://github.com/derui/reactjscaml"
bug-reports: "https://github.com/derui/reactjscaml"
dev-repo: "https://github.com/derui/reactjscaml"
tags: []
build: [
  "jbuilder" "build" "-p" name "-j" jobs
]
depends: [
  "jbuilder" { >= "1.0+beta16"}
  "ocamlfind"
  "js_of_ocaml" { >= "3.0.2"}
  "js_of_ocaml-ppx" { >= "3.0.2"}
  "ppx_variants_conv" { >= "v0.10.0"}
  "mocha_of_ocaml" {"test"}
]
available: [ocaml-version >= "4.05.0"]
